# cui-embed

./: .gitignore  README.md  pyproject.toml
cui_embed/: __init__.py  cui_embed.py
cui_embed/model/: .gitignore
tests/: test_cui_embed.py
