[tool.poetry]
name = "cui-embed"
version = "0.1.0"
description = ""
authors = ["Bell Eapen <github_public@gulfdoctor.net>"]

readme = 'README.md'  # Markdown files are supported

[tool.poetry.dependencies]
python = "^3.7"
gensim = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
